# graspnet-baseline

./: CLAUDE.md  INSTALL.md  README.md  demo.py  demo_ros2.py  graspnet_node.py
graspnet_ros2/: package.xml  setup.py
graspnet_ros2/graspnet_ros2/: graspnet_node.py
graspnet_ros2/launch/: graspnet.launch.py
graspnet_ros2/scripts/: make_workspace_mask.py
